--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Dossier 1 Presentation</title>
-  <link rel="stylesheet" type="text/css" href="/assets/jquery.fullpage.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/jquery.fullpage.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -269,7 +269,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="/assets/jquery.fullpage.min.js"></script>
+  <script src="assets/jquery.fullpage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script>
     $(document).ready(function() {
